<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:id="@+id/activity_main">

    <EditText
        android:id="@+id/channel_one_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/annie_use_your_telescope"
        android:hint="@string/channel_one_text" />

    <Button
        android:id="@+id/post_to_channel_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_label" />

    <Button
        android:id="@+id/channel_one_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <EditText
        android:id="@+id/channel_two_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/annie_use_your_telescope"
        android:hint="@string/channel_two_text" />

    <Button
        android:id="@+id/post_to_channel_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_label" />

    <Button
        android:id="@+id/channel_two_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/app_name" />

</LinearLayout>